--- a/Disaster_Declarations_Dashboard.ipynb
+++ b/Disaster_Declarations_Dashboard.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e49e7b25",
+   "metadata": {},
+   "source": [
+    "Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7dc57611",
@@ -21,6 +29,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf825fb0",
+   "metadata": {},
+   "source": [
+    "Connect to ArcGIS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "4041c933",
@@ -31,16 +47,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "122050f6",
+   "metadata": {},
+   "source": [
+    "Get my geometries and test layer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3ee2370f",
    "metadata": {},
    "outputs": [],
    "source": [
     "dd_id = \"d37c3c2a6f1c4586baad82828bfc3c59\"\n",
-    "\n",
     "dd_item = gis.content.get(dd_id)\n",
-    "\n",
     "geometries_layer = dd_item.layers[1]\n",
     "\n",
     "# Item ID 0 is the output layer displayed in the dashboard\n",
@@ -48,10 +70,49 @@
     "#dashboard_layer = dd_item.layers[0]\n",
     "\n",
     "test_id = \"edb716da51bc4f7882d13d425ad08fd2\"\n",
-    "\n",
     "test_item = gis.content.get(test_id)\n",
-    "\n",
     "dashboard_layer = test_item.layers[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "136bc967",
+   "metadata": {},
+   "source": [
+    "Create spatial dfs from dashboard layer and geometries layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c6a0ba42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4000, 19)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dashboard_sdf = dashboard_layer.query().sdf\n",
+    "dashboard_sdf.shape\n",
+    "\n",
+    "geometries_sdf = geometries_layer.query().sdf\n",
+    "geometries_sdf.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85f379d3",
+   "metadata": {},
+   "source": [
+    "Get the goods from openFEMA API"
    ]
   },
   {
@@ -75,12 +136,18 @@
     "api_url = r\"https://www.fema.gov/api/open/v2/DisasterDeclarationsSummaries?$filter=fyDeclared ge 2013&$orderby=declarationDate desc\"\n",
     "\n",
     "response = requests.get(api_url)\n",
-    "\n",
     "data = response.json()\n",
-    "\n",
     "summaries_df = pd.DataFrame(data[\"DisasterDeclarationsSummaries\"])\n",
     "\n",
     "summaries_df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b78c44e",
+   "metadata": {},
+   "source": [
+    "In summaries df, convert pseudo-date string fields to date fields..."
    ]
   },
   {
@@ -97,25 +164,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e042708",
+   "metadata": {},
+   "source": [
+    "In summaries df, add & calc full fips & full tribal code fields; add & calc covid & entity fields\n",
+    "* No I can't move these steps below checking for adds because the check for adds needs e.i Entity field"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "e31bd54e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add & calc FIPS & Tribal FIPS fields\n",
     "summaries_df[\"fipsFullCode\"] = summaries_df[\"fipsStateCode\"] + summaries_df[\"fipsCountyCode\"]\n",
     "summaries_df[\"fipsTribalCode\"] = summaries_df[\"fipsStateCode\"] + summaries_df[\"placeCode\"]\n",
     "\n",
-    "summaries_df[\"COVID19\"] = np.where(summaries_df[\"declarationTitle\"].str.contains(\"COVID-19\"), \"Show only COVID-19\", \"Show only non-COVID-19\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "8262e79c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Add & calc COVID-19 field\n",
+    "summaries_df[\"COVID19\"] = np.where(summaries_df[\"declarationTitle\"].str.contains(\"COVID-19\"), \"Show only COVID-19\", \"Show only non-COVID-19\")\n",
+    "\n",
+    "# Add & calc Entity field\n",
     "entity_conditions = [\n",
     "    summaries_df[\"designatedArea\"] == \"Statewide\",\n",
     "    (summaries_df[\"designatedArea\"] != \"Statewide\") & (summaries_df[\"fipsCountyCode\"] == \"000\"),\n",
@@ -128,50 +199,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "6929c822",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(101, 24)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dashboard_sdf = dashboard_layer.query().sdf\n",
-    "\n",
-    "dashboard_sdf.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "aaad6e30",
+   "id": "d09eff43",
    "metadata": {},
    "source": [
-    "Okay sooooooo finally think I figured out the NEXT link in the Chain Of Things That Blew Up.\n",
-    "It's not picking up the tribal I need to add. But the line below DOES assume that the femaDecString is unique when it's NOT. If the Dec string is already in the dashboard for a county, it's not going to pick up that it needs to add it for tribal, DUH. I guess I will need a multi-field key to check for adds. DUH."
+    "Check whether there are adds (rows in Summaries not already in Dashboard)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "00f171ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 32)"
+       "(0, 32)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,19 +227,30 @@
     "multi_key = [\"femaDeclarationString\", \"Entity\"]\n",
     "\n",
     "pre_adds = summaries_df.merge(dashboard_sdf[multi_key], on=multi_key, how=\"left\", indicator=True)\n",
-    "\n",
     "adds_df = pre_adds[pre_adds[\"_merge\"] == \"left_only\"].drop(columns=[\"_merge\"])\n",
     "\n",
     "adds_df.shape"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66d26e2f",
+   "metadata": {},
+   "source": [
+    "Set up vars & field mapping for use in parsing out out multi-key adds"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "304d81bf",
+   "execution_count": 9,
+   "id": "4cea13b1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "state = \"State or Equivalent\"\n",
+    "county = \"County or Equivalent\"\n",
+    "tribal = \"Tribal Area or Equivalent\" \n",
+    "\n",
     "state_field = \"State_FIPS\"\n",
     "county_field = \"Full_FIPS\"\n",
     "tribal_field1 = \"AIANNHFP1\"\n",
@@ -210,57 +268,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90a493b8",
+   "id": "d515e5e4",
    "metadata": {},
    "source": [
-    "### Get geometries associated with each Dec string for all three entity types\n",
-    "Since this has to be done technically 5 times (there are three different keys for Tribal), a function it is\n",
-    "(Yeah we'll throw everything in a function later, probably, since it's just tidy, but this requires it)"
+    "Get the geometries for all multi-key combos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "3d433335",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geometries_sdf = geometries_layer.query().sdf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "6a902d8a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['femaDeclarationString', 'disasterNumber', 'state', 'declarationType',\n",
-       "       'declarationDate', 'fyDeclared', 'incidentType', 'declarationTitle',\n",
-       "       'ihProgramDeclared', 'iaProgramDeclared', 'paProgramDeclared',\n",
-       "       'hmProgramDeclared', 'incidentBeginDate', 'incidentEndDate',\n",
-       "       'disasterCloseoutDate', 'tribalRequest', 'fipsStateCode',\n",
-       "       'fipsCountyCode', 'placeCode', 'designatedArea',\n",
-       "       'declarationRequestNumber', 'lastIAFilingDate', 'incidentId', 'region',\n",
-       "       'designatedIncidentTypes', 'lastRefresh', 'hash', 'id', 'fipsFullCode',\n",
-       "       'fipsTribalCode', 'COVID19', 'Entity'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "adds_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "b1c85969",
    "metadata": {},
    "outputs": [
@@ -270,17 +286,13 @@
      "text": [
       "(0, 51)\n",
       "(0, 51)\n",
-      "(2, 51)\n",
+      "(0, 51)\n",
       "(0, 51)\n",
       "(0, 51)\n"
      ]
     }
    ],
    "source": [
-    "state = \"State or Equivalent\"\n",
-    "county = \"County or Equivalent\"\n",
-    "tribal = \"Tribal Area or Equivalent\" \n",
-    "\n",
     "def get_geometries(entity, field):\n",
     "\n",
     "    # Checking Dec-string-per-entity\n",
@@ -295,48 +307,26 @@
     "    return merged\n",
     "\n",
     "state_geometries = get_geometries(state, state_field)\n",
-    "\n",
     "county_geometries = get_geometries(county, county_field)\n",
-    "\n",
     "tribal1_geometries = get_geometries(tribal, tribal_field1)\n",
-    "\n",
     "tribal2_geometries = get_geometries(tribal, tribal_field2)\n",
+    "tribal3_geometries = get_geometries(tribal, tribal_field3)\n",
     "\n",
-    "tribal3_geometries = get_geometries(tribal, tribal_field3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c6cd3136",
-   "metadata": {},
-   "source": [
-    "### Stack the entity dataframes\n",
-    "Once I've generated rows for all Entity / Dec string combinations, I can just stack them for simple processing below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "9cab49e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Stack all geometries\n",
     "adds_geometries = pd.concat([state_geometries, county_geometries, tribal1_geometries, tribal2_geometries, tribal3_geometries])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c1805221",
+   "id": "8ef9789a",
    "metadata": {},
    "source": [
-    "### Testing 9/7\n",
-    "* Current problem: I deleted the Tribal entities in the testing data (4 rows); the script isn't picking up anything new to add.\n",
-    "* Must be that I am not calculating my tribal keys correctly; looking into this now."
+    "If there are no rows to quit, message & set switch to disable remaining blocks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "ddbfba12",
    "metadata": {},
    "outputs": [
@@ -344,36 +334,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Entity', 'femaDeclarationString', 'disasterNumber', 'state', 'declarationType', 'declarationDate', 'fyDeclared', 'incidentType', 'declarationTitle', 'incidentBeginDate', 'incidentEndDate', 'disasterCloseoutDate', 'tribalRequest', 'fipsStateCode', 'declarationRequestNumber', 'lastIAFilingDate', 'incidentId', 'region', 'designatedIncidentTypes', 'COVID19']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "{\"cost\": 0.002}\n"
+      "Found no new Declarations to add! We're done here.\n"
      ]
     }
    ],
    "source": [
-    "if adds_geometries.empty:\n",
-    "    \n",
-    "    print(\"Found no new Declarations to add! We're done here.\")\n",
+    "proceed = True\n",
     "\n",
-    "else:\n",
+    "# If no geometries to add, quit\n",
+    "if adds_geometries.empty:\n",
+    "    proceed = False\n",
+    "    print(\"Found no new Declarations to add! We're done here.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f5a955b",
+   "metadata": {},
+   "source": [
+    "If there are adds, go ahead with the dissolve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1306bd1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if proceed:\n",
     "\n",
     "    adds_feature_collection = adds_geometries.spatial.to_feature_collection()\n",
     "\n",
     "    remove_fields = [\"OBJECTID\", \"Shape__Area\", \"Shape__Length\", \"SHAPE\"]\n",
-    "\n",
     "    dissolve_fields = [f[\"name\"] for f in dashboard_layer.properties.fields if not f[\"name\"] in remove_fields]\n",
     "\n",
-    "    print(dissolve_fields)\n",
-    "\n",
-    "    adds_dissolved = manage_data.dissolve_boundaries(adds_feature_collection, dissolve_fields=dissolve_fields)\n",
-    "\n",
+    "    adds_dissolved = manage_data.dissolve_boundaries(adds_feature_collection, dissolve_fields=dissolve_fields)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3b2431f",
+   "metadata": {},
+   "source": [
+    "...and finally add the features to the dashboard layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e0c16524",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if proceed:\n",
     "    adds_features = adds_dissolved.query().features\n",
-    "\n",
     "    message = dashboard_layer.edit_features(adds_features)\n",
     "\n",
     "    message"
