--- a/Disaster_Declarations_Dashboard.ipynb
+++ b/Disaster_Declarations_Dashboard.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b9d0bef7",
    "metadata": {},
    "outputs": [
@@ -137,9 +137,7 @@
     "\n",
     "response = requests.get(api_url)\n",
     "data = response.json()\n",
-    "summaries_df = pd.DataFrame(data[\"DisasterDeclarationsSummaries\"])\n",
-    "\n",
-    "summaries_df.shape"
+    "summaries_df = pd.DataFrame(data[\"DisasterDeclarationsSummaries\"])"
    ]
   },
   {
@@ -276,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b1c85969",
    "metadata": {},
    "outputs": [
@@ -301,8 +299,6 @@
     "    # NEED to specify an empty string for at least one of the suffixes here;\n",
     "    # Otherwise I have no \"Entity\" field and my Dashboard layer and adds feature collection won't have matching fields\n",
     "    merged = entity_adds_df.merge(geometries_sdf, left_on=[key_fields_dict[field]], right_on=field, suffixes=('', '_2'))\n",
-    "\n",
-    "    print(merged.shape)\n",
     "\n",
     "    return merged\n",
     "\n",
@@ -382,12 +378,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e0c16524",
    "metadata": {},
    "outputs": [],
    "source": [
     "if proceed:\n",
+    "    \n",
     "    adds_features = adds_dissolved.query().features\n",
     "    message = dashboard_layer.edit_features(adds_features)\n",
     "\n",
