Add markdown intro/summary

--- a/Disaster_Declarations_Dashboard.ipynb
+++ b/Disaster_Declarations_Dashboard.ipynb
@@ -2,15 +2,49 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4083edf1",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    h1 {\n",
+    "        margin-bottom: -.5em;\n",
+    "    }\n",
+    "</style>\n",
+    "\n",
+    "# FEMA Disaster Declarations Summaries Dashboard Update Notebook\n",
+    "### An ArcGIS Notebook leveraging the ArcGIS API for Python to automatically update a FEMA-derived custom Dashboard dataset\n",
+    "By Misti Wudtke | misti@aldermaps.com | Portfolio: [aldermaps.com](https://aldermaps.com)\n",
+    "\n",
+    "This ArcGIS Notebook is the data update component of my [FEMA Disaster Declaration Summaries ArcGIS Dashboard](https://disasterdeclarations.aldermaps.com/). \n",
+    "\n",
+    "The Notebook runs automatically once per day via a scheduled Task in ArcGIS Online. It connects to openFEMA's API and accesses [FEMA's Disaster Declaration Summaries (v2)](https://www.fema.gov/openfema-data-page/disaster-declarations-summaries-v2), comparing the most recent Summaries with the Summaries that have already been processed and included in the Dashboard. Any new (by declarationDate) Summaries are processed by the Notebook and added to the Dashboard's Declarations Summaries feature layer.\n",
+    "\n",
+    "FEMA's Disaster Declaration Summaries comprise multiple rows/observations for a given Disaster Declaration String (e.g., EM-3454-WI), one row/observation for every entity (usually, a county or tribal area, but occassionally an entire state). This Notebook's processing primarily consists of dissolving the boundaries of multiple FEMA Declaration strings. In other words, a single FEMA Declaration String is represented by one _or more_ rows (e.g. counties) in FEMA's data, whereas in this Dashbaord and its underlying data, a single FEMA Declaration String is represented by a single row/geometry. Note that a row's geometry may not be contiguous, i.e. it may comprise a multipart feature.\n",
+    "\n",
+    "An exception to this data organization paradigm is FEMA Declaration Strings that encompass multiple entities (e.g., a Declaration string with rows applying to both counties and tribal areas). In this case, a separate row/geometry is created for each Declaration String/entity combination. Different entities (state, county, tribal area) may be viewed separately within the Dashboard via the filter in the Dashboard header.\n",
+    "\n",
+    "The data is summarized at the Declaration String level both to facilitate analysis of spatiotemporal patterns in Disaster Declarations Summaries, and for performance reasons.\n",
+    "\n",
+    "The ArcGIS Online Dashboard and its components (web map, feature layers) are publicly available, along with this Dashboard, for use by anyone for anything.\n",
+    "\n",
+    "* [ArcGIS Dashboard](https://alder.maps.arcgis.com/apps/dashboards/c38d501975e94300a4b53724ff0f8cc8)\n",
+    "* [Dashboard Web Map](https://alder.maps.arcgis.com/apps/mapviewer/index.html?webmap=8b9bb0580a49458a8d1592c9d78f9b85)\n",
+    "* [Dashboard Feature Layer (includes Summaries & Geometries layers)](https://alder.maps.arcgis.com/home/item.html?id=d37c3c2a6f1c4586baad82828bfc3c59)\n",
+    "* [Notebook (ArcGIS Online)](https://alder.maps.arcgis.com/home/item.html?id=31caad975e8348a2bc9406825b958436)\n",
+    "* [Notebook (GitHub)](https://github.com/AlderMaps/arcgis-api-python/blob/main/Disaster_Declarations_Dashboard.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e49e7b25",
    "metadata": {},
    "source": [
-    "Imports"
+    "### Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7dc57611",
    "metadata": {},
    "outputs": [],
@@ -18,14 +52,16 @@
     "import requests\n",
     "\n",
     "from arcgis.gis import GIS\n",
-    "from arcgis.features import manage_data\n",
+    "from arcgis.features import manage_data # For dissolving declaration boundaries\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "import warnings\n",
-    "from urllib3.exceptions import InsecureRequestWarning\n",
-    "warnings.simplefilter(\"ignore\", InsecureRequestWarning)"
+    "# No longer getting the warnings I was supressing here\n",
+    "# but leaving this in in case it comes back\n",
+    "#import warnings\n",
+    "#from urllib3.exceptions import InsecureRequestWarning\n",
+    "#warnings.simplefilter(\"ignore\", InsecureRequestWarning)"
    ]
   },
   {
@@ -33,7 +69,7 @@
    "id": "bf825fb0",
    "metadata": {},
    "source": [
-    "Connect to ArcGIS"
+    "### Connect to ArcGIS"
    ]
   },
   {
@@ -51,7 +87,7 @@
    "id": "122050f6",
    "metadata": {},
    "source": [
-    "Get my geometries and test layer"
+    "### Get my geometries and test layer"
    ]
   },
   {
@@ -79,7 +115,7 @@
    "id": "136bc967",
    "metadata": {},
    "source": [
-    "Create spatial dfs from dashboard layer and geometries layer"
+    "### Create spatial dfs from dashboard layer and geometries layer"
    ]
   },
   {
@@ -112,7 +148,7 @@
    "id": "85f379d3",
    "metadata": {},
    "source": [
-    "Get the goods from openFEMA API"
+    "### Get the goods from openFEMA API"
    ]
   },
   {
@@ -134,7 +170,7 @@
    "id": "4b78c44e",
    "metadata": {},
    "source": [
-    "In summaries df, convert pseudo-date string fields to date fields..."
+    "### In summaries df, convert pseudo-date string fields to date fields..."
    ]
   },
   {
@@ -155,7 +191,7 @@
    "id": "7e042708",
    "metadata": {},
    "source": [
-    "In summaries df, add & calc full fips & full tribal code fields; add & calc covid & entity fields\n",
+    "### In summaries df, add & calc full fips & full tribal code fields; add & calc covid & entity fields\n",
     "* No I can't move these steps below checking for adds because the check for adds needs e.i Entity field"
    ]
   },
@@ -190,7 +226,7 @@
    "id": "d09eff43",
    "metadata": {},
    "source": [
-    "Check whether there are adds (rows in Summaries not already in Dashboard)"
+    "### Check whether there are adds (rows in Summaries not already in Dashboard)"
    ]
   },
   {
@@ -224,7 +260,7 @@
    "id": "66d26e2f",
    "metadata": {},
    "source": [
-    "Set up vars & field mapping for use in parsing out out multi-key adds"
+    "### Set up vars & field mapping for use in parsing out out multi-key adds"
    ]
   },
   {
@@ -258,7 +294,7 @@
    "id": "d515e5e4",
    "metadata": {},
    "source": [
-    "Get the geometries for all multi-key combos"
+    "### Get the geometries for all multi-key combos"
    ]
   },
   {
@@ -294,7 +330,7 @@
    "id": "8ef9789a",
    "metadata": {},
    "source": [
-    "If there are no rows to quit, message & set switch to disable remaining blocks"
+    "### If there are no rows to quit, message & set switch to disable remaining blocks"
    ]
   },
   {
@@ -325,7 +361,7 @@
    "id": "1f5a955b",
    "metadata": {},
    "source": [
-    "If there are adds, go ahead with the dissolve"
+    "### If there are adds, go ahead with the dissolve"
    ]
   },
   {
@@ -350,7 +386,7 @@
    "id": "b3b2431f",
    "metadata": {},
    "source": [
-    "...and finally add the features to the dashboard layer"
+    "### ...and finally add the features to the dashboard layer"
    ]
   },
   {
