--- a/Disaster_Declarations_Dashboard.ipynb
+++ b/Disaster_Declarations_Dashboard.ipynb
@@ -87,60 +87,34 @@
    "id": "122050f6",
    "metadata": {},
    "source": [
-    "### Get my geometries and test layer"
+    "### Get Dashboard feature layers (Geometries and Summaries)\n",
+    "\n",
+    "The Notebook uses two feature layers (published in a [single feature layer collection](https://alder.maps.arcgis.com/home/item.html?id=d37c3c2a6f1c4586baad82828bfc3c59)):\n",
+    "\n",
+    "* The input or \"geometries\" layer, which the script references to retrieve feature geometries associated with Declaration Summary rows.\n",
+    "* The output or \"dashboard\" layer, to which the dissolved summary geometries are written. This is the layer that actually appears in the Dashboard.\n",
+    "\n",
+    "Both layers are retrieved and converted to spatial data frames (sdf) to facilitate processing with the summaries data from fema, also a pandas dataframe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3ee2370f",
    "metadata": {},
    "outputs": [],
    "source": [
     "dd_id = \"d37c3c2a6f1c4586baad82828bfc3c59\"\n",
     "dd_item = gis.content.get(dd_id)\n",
-    "geometries_layer = dd_item.layers[1]\n",
+    "geometries_sdf = dd_item.layers[1].query.sdf\n",
     "\n",
-    "# Item ID 0 is the output layer displayed in the dashboard\n",
-    "# COMMENTING OUT WHILE TESTING\n",
+    "# Production layer; commented out while testing\n",
     "#dashboard_layer = dd_item.layers[0]\n",
     "\n",
+    "# Test layer; replace with above on conversion to production\n",
     "test_id = \"edb716da51bc4f7882d13d425ad08fd2\"\n",
     "test_item = gis.content.get(test_id)\n",
-    "dashboard_layer = test_item.layers[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "136bc967",
-   "metadata": {},
-   "source": [
-    "### Create spatial dfs from dashboard layer and geometries layer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "c6a0ba42",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4000, 19)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dashboard_sdf = dashboard_layer.query().sdf\n",
-    "dashboard_sdf.shape\n",
-    "\n",
-    "geometries_sdf = geometries_layer.query().sdf\n",
-    "geometries_sdf.shape"
+    "dashboard_sdf = test_item.layers[0].query.sdf"
    ]
   },
   {
@@ -148,12 +122,20 @@
    "id": "85f379d3",
    "metadata": {},
    "source": [
-    "### Get the goods from openFEMA API"
+    "### Hit openFEMA API; convert response to Pandas Dataframe\n",
+    "\n",
+    "I have not altered the default number of records returned by the API, which is 1000.\n",
+    "\n",
+    "Two filters are applied to the API URL:\n",
+    "\n",
+    "* \"fyDeclared ge 2013\" : Return only values from the field fyDeclared (Fiscal Year Declared) greater than or equal to 2013\n",
+    "    * _(This filter ensures the declarations match the temporal range of the records in my geometries reference layer)_\n",
+    "* \"orderby=declarationDate desc\" : Order the results (descending) by the declarationDate field ensures the most recent records are returned"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b9d0bef7",
    "metadata": {},
    "outputs": [],
@@ -170,7 +152,9 @@
    "id": "4b78c44e",
    "metadata": {},
    "source": [
-    "### In summaries df, convert pseudo-date string fields to date fields..."
+    "### Convert all pseudo-date fields in Summaries dataframe from string/object to true datetime\n",
+    "\n",
+    "All other potentially troublesome fields (e.g. FIPS) were checked in preliminary analysis and determined to be the correct data types (object/string)."
    ]
   },
   {
@@ -191,25 +175,30 @@
    "id": "7e042708",
    "metadata": {},
    "source": [
-    "### In summaries df, add & calc full fips & full tribal code fields; add & calc covid & entity fields\n",
-    "* No I can't move these steps below checking for adds because the check for adds needs e.i Entity field"
+    "### Add and calculate columns in Summaries dataframe\n",
+    "\n",
+    "\"fipsFullCode\" and \"fipsTribalCode fields: The addition of a full five-digit FIPS code enables a single-column comparison of rows between Summaries and the Dashboard dataframes\n",
+    "\n",
+    "\"COVID19\": This field enables the COVID-19 filter in the Dashboard header, allowing the user to view only COVID, only non-COVID, or all Summaries.\n",
+    "\n",
+    "\"Entity\": Whether a given row in the FEMA Summaries dataset designates a state, county or tribal area is determined by multiple fields; the addition of an \"Entity\" field simplifies identification of a designation to a single field, and also enables the Entity filter in the Dashboard header."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e31bd54e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add & calc FIPS & Tribal FIPS fields\n",
+    "# Add & calculate FIPS & Tribal FIPS fields\n",
     "summaries_df[\"fipsFullCode\"] = summaries_df[\"fipsStateCode\"] + summaries_df[\"fipsCountyCode\"]\n",
     "summaries_df[\"fipsTribalCode\"] = summaries_df[\"fipsStateCode\"] + summaries_df[\"placeCode\"]\n",
     "\n",
-    "# Add & calc COVID-19 field\n",
+    "# Add & calculate COVID-19 field\n",
     "summaries_df[\"COVID19\"] = np.where(summaries_df[\"declarationTitle\"].str.contains(\"COVID-19\"), \"Show only COVID-19\", \"Show only non-COVID-19\")\n",
     "\n",
-    "# Add & calc Entity field\n",
+    "# Add & calculate Entity field\n",
     "entity_conditions = [\n",
     "    summaries_df[\"designatedArea\"] == \"Statewide\",\n",
     "    (summaries_df[\"designatedArea\"] != \"Statewide\") & (summaries_df[\"fipsCountyCode\"] == \"000\"),\n",
